--- a/style.css
+++ b/style.css
@@ -52,8 +52,7 @@ section {
   width: 100vw;
   height: 100vh;
   position: relative;
-  overflow: hidden;
-
+  /* overflow: hidden; */
 }
 
 .background::before {
@@ -77,8 +76,8 @@ section {
   height: 70vh;
   background-color: rgb(12, 113, 224);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 0 2vmin 1vmin rgba(0, 0, 0, 0.7);
-  transition: 1s;
-  
+  transition: 0.7s;
+
   z-index: 10;
 }
 
@@ -99,14 +98,12 @@ section {
   position: relative;
   left: 0vw;
   top: -100vh;
-
 }
 
 #contactPage {
   position: relative;
   left: 100vw;
   top: -200vh;
-
 }
 
 .toTop,
@@ -120,15 +117,6 @@ section {
   padding: 0;
 
   z-index: 20;
-}
-
-.toTop:hover,
-.toRight:hover,
-.toBottom:hover,
-.toLeft:hover {
-  transition-duration: 0.6s;
-  width: 5.5vmax;
-  height: 5.5vmax;
 }
 
 .toTop {
