--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ section {
   width: 100vw;
   height: 100vh;
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .background::before {
