--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ section {
   margin: auto;
   width: 80vw;
   height: 70vh;
+  border-radius: 5vmin;
   background-color: rgb(12, 113, 224);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 0 2vmin 1vmin rgba(0, 0, 0, 0.7);
   transition: 0.5s;
