--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ section {
   width: 80vw;
   height: 70vh;
   border-radius: 5vmin;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(12, 113, 224)), url("/img/dayMode.jpg");
+  background: linear-gradient(to bottom, rgba(12, 113, 224, 0.2), rgb(12, 113, 224) 20%), url("/img/dayMode.jpg");
+  background-position: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 0 2vmin 1vmin rgba(0, 0, 0, 0.7);
   transition: 0.5s;
 
