--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
   content: url(/img/cogConfig.png);
   position: absolute;
   width: 15vmin;
-  right: 3vw;
-  bottom: 3vh; 
+  right: 3vmin;
+  bottom: 3vmin; 
   border-radius: 50%;
   background-color: lightblue;
   transition: 1s;
