--- a/style.css
+++ b/style.css
@@ -175,11 +175,12 @@ h1 {
   margin: 0;
   text-align: center;
   color: rgb(248, 248, 248);
+  margin: 3vmin 0;
 }
 
 p {
   font-weight: 400;
-  margin: 0;
+  margin: 0 0 0 3vmin;
   font-size: 3vmin;
   text-align: left;
   color: rgb(248, 248, 248);
