Config Menu adjustments

--- a/style.css
+++ b/style.css
@@ -18,27 +18,29 @@ body {
 }
 
 #config {
-  background-color: lightblue;
+  background-color: white;
   border-radius: 50%;
   content: url(/img/cogConfig.png);
+  padding: 1vmin;
   position: absolute;
   right: 3vmin;
   bottom: 3vmin;
-  height: 10vmin;
-  width: 10vmin;
+  height: 8vmin;
+  width: 8vmin;
   transition: right 1s, bottom 1s;
   z-index: 20;
 }
 
 #configMenu {
-  background-color: pink;
-  border-radius: 5vmin 0 0 5vmin;
-  height: 10vmin;
-  width: 0vmin;
+  background-color: whitesmoke;
+  border-radius: 4vmin;
+  box-shadow: 0 0.4vmin 0.8vmin 0 rgba(0, 0, 0, 1), 0 0 2vmin 1vmin rgba(0, 0, 0, 0.7);
+  height: 8vmin;
+  width: 8vmin;
   position: absolute;
-  right: 8vmin;
+  right: 3vmin;
   bottom: 3vmin;
-  transition: 1s;
+  transition: right 1s, bottom 1s, width 0.7s;
   z-index: 19;
 }
 
@@ -68,7 +70,7 @@ section {
 }
 
 .background::before {
-  color: rgb(245, 245, 245);
+  color: whitesmoke;
   content: "EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND ";
   font-size: 2vmax;
   font-weight: 900;
@@ -80,7 +82,7 @@ section {
 .pageContent {
   background: linear-gradient(to bottom, rgba(12, 113, 224, 0.2), rgb(12, 113, 224) 20%), url("/img/dayMode.jpg") bottom;
   border-radius: 5vmin;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 0 2vmin 1vmin rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0.4vmin 0.8vmin 0 rgba(0, 0, 0, 1), 0 0 2vmin 1vmin rgba(0, 0, 0, 0.7);
   height: 70vh;
   width: 80vw;
   margin: auto;
