--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ html {
   --color-3: rgb(12, 113, 224);
   --banner: url("/img/dayMode.jpg");
   --arrow: url("/img/dayArrow.png");
-  --cog: url("/img/cogDay.png");
   scroll-behavior: smooth;
 }
 
@@ -24,7 +23,6 @@ html {
   --color-3: #990000;
   --banner: url("/img/nightMode.jpg");
   --arrow: url("/img/nightArrow.png");
-  --cog: url("/img/cogNight.png");
 }
 
 body {
@@ -33,9 +31,9 @@ body {
 }
 
 #config {
-  background-color: var(--color-1);
+  background-color: white;
   border-radius: 50%;
-  content: url(--cog);
+  content: url("/img/cog.png");
   padding: 1vmin;
   position: absolute;
   right: 3vmin;
